<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/view4"
        android:layout_width="252dp"
        android:layout_height="145dp"
        android:background="@color/md_grey_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.428" />

    <TextView
        android:id="@+id/lat"
        android:layout_width="188dp"
        android:layout_height="39dp"
        android:text="@string/lat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/types_of_bins"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/types_of_bins"
        android:layout_width="187dp"
        android:layout_height="29dp"
        android:text="@string/types_of_bins"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/view4" />

    <TextView
        android:id="@+id/Lng"
        android:layout_width="188dp"
        android:layout_height="35dp"
        android:text="@string/lng"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/lat" />

    <TextView
        android:id="@+id/distance"
        android:layout_width="189dp"
        android:layout_height="32dp"
        android:text="@string/distance"
        app:layout_constraintStart_toStartOf="@+id/lat"
        app:layout_constraintTop_toBottomOf="@+id/Lng" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="64dp"
        android:layout_height="82dp"
        app:layout_constraintStart_toStartOf="@+id/view4"
        app:layout_constraintTop_toTopOf="@+id/view4"
        app:srcCompat="@drawable/binfind"
        android:contentDescription="@string/todo" />

</androidx.constraintlayout.widget.ConstraintLayout>